211026 : 타임리프 기초 공부 완료

--- a/src/main/resources/templates/fragments/fragment2.html
+++ b/src/main/resources/templates/fragments/fragment2.html
@@ -5,6 +5,11 @@
     <title>주니하랑의 타임리프 연습</title>
 </head>
 <body>
-    <h1 th:text="${'Hello World'}"></h1>
+
+   <hr/>
+   <h2>Fragment2 File</h2>
+   <h2>Fragment2 File</h2>
+   <h2>Fragment2 File</h2>
+    <hr/>
 </body>
 </html>
