--- a/src/main/resources/templates/sample/ex2.html
+++ b/src/main/resources/templates/sample/ex2.html
@@ -5,6 +5,10 @@
     <title>주니하랑의 타임리프 연습</title>
 </head>
 <body>
-    <h1 th:text="${'Hello World'}"></h1>
+    <ul>
+        <th:block th:each="dto: ${list}">
+            <li th:text="${dto.sno % 5 == 0} ? ${dto.sno} : ${dto.first}"></li>
+        </th:block>
+    </ul>
 </body>
 </html>
