--- a/src/main/resources/templates/sample/ex3.html
+++ b/src/main/resources/templates/sample/ex3.html
@@ -5,6 +5,14 @@
     <title>주니하랑의 타임리프 연습</title>
 </head>
 <body>
-    <h1 th:text="${'Hello World'}"></h1>
+
+    <h1 th:text="${result}"></h1>
+    <h1 th:text="${dto}"></h1>
+
+    <script th:inline="javascript">
+        var msg = [[${result}]];
+        var dto = [[${dto}]];
+    </script>
+
 </body>
 </html>
