--- a/src/main/resources/templates/sample/exLink.html
+++ b/src/main/resources/templates/sample/exLink.html
@@ -5,6 +5,10 @@
     <title>주니하랑의 타임리프 연습</title>
 </head>
 <body>
-    <h1 th:text="${'Hello World'}"></h1>
+    <ul>
+        <li th:each="dto : ${list}">
+            [[${dto.sno}]] --- [[${#temporals.format(dto.regTime, 'yyyy/MM/dd')}]]
+        </li>
+    </ul>
 </body>
 </html>
